--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,13 @@ jobs:
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: 'stable'
+        flutter-version: '3.19.0'
+        
+    - name: Check files
+      run: |
+        echo "=== Archivos existentes ==="
+        find . -name "*.dart" -o -name "pubspec.yaml" | head -10
+        ls -la
         
     - name: Install dependencies
       run: flutter pub get
@@ -28,4 +34,3 @@ jobs:
       with:
         name: app-release
         path: build/app/outputs/flutter-apk/app-release.apk
-        retention-days: 7
